test/testdata/e2e/tracing/tracing-otlp.yaml
apiVersion: envoy.kaasops.io/v1alpha1
kind: Tracing
metadata:
  name: tracing-otlp
spec:
  provider:
    name: envoy.tracers.opentelemetry
    typed_config:
      "@type": type.googleapis.com/envoy.config.trace.v3.OpenTelemetryConfig
      grpc_service:
        envoy_grpc:
          cluster_name: otel-collector
