test/testdata/e2e/tracing/vs-ref-otel.yaml
apiVersion: envoy.kaasops.io/v1alpha1
kind: VirtualService
metadata:
  name: vs-tracing-ref-otel
  annotations:
    envoy.kaasops.io/node-id: test
spec:
  listener:
    name: http
  httpFilters:
    - name: envoy.filters.http.router
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  virtualHost:
    name: tracing-ref-vh
    domains:
      - test.kaasops.io
    routes:
      - match:
          prefix: "/"
        direct_response:
          status: 200
          body:
            inline_string: "{\"message\":\"ok\"}\n"
  tracingRef:
    name: tracing-otlp
